add menu media query.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
             <a href="contact-me.html">Contact Me</a>
             <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
         </div>
+
+        <div class="dropdown">
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <div class="dropdown-content">
+                <nav>
+                    <a href="index.html" class="current-page">Home</a>
+                    <a href="about-me.html">About Me</a>
+                    <a href="contact-me.html">Contact Me</a>
+                    <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
+                </nav>
+            </div>
+        </div>
     </header>
 
     <!-- Blog entries -->
