--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="contact-me.html">Contact Me</a>
             <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
         </div>
+        
+        <!-- Dropdown menu -->
 
         <div class="dropdown">
             <span></span>
