--- a/contact-me.html
+++ b/contact-me.html
@@ -32,9 +32,9 @@
 
             <div class="dropdown-content">
                 <nav>
-                    <a href="index.html" class="current-page">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about-me.html">About Me</a>
-                    <a href="contact-me.html">Contact Me</a>
+                    <a href="contact-me.html" class="current-page">Contact Me</a>
                     <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
                 </nav>
             </div>
