--- a/about-me.html
+++ b/about-me.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>About | Waterman Photography</title>
+    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
