Remove current-page from dropdown.

--- a/contact-me.html
+++ b/contact-me.html
@@ -35,7 +35,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about-me.html">About Me</a>
-                    <a href="contact-me.html" class="current-page">Contact Me</a>
+                    <a href="contact-me.html">Contact Me</a>
                     <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
                 </nav>
             </div>
