--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,7 @@
             <div class="dropdown-content">
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="about-me.html" class="current-page">About Me</a>
+                    <a href="about-me.html">About Me</a>
                     <a href="contact-me.html">Contact Me</a>
                     <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
                 </nav>
