--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Waterman Photography</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
-    <meta name="description" content="A photography blog following my travels and adventures. A collection of all my nicest Pictures.">
+    <meta name="description" content="A photography blog following my travels and adventures. A collection of all my favorite Pictures.">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
 </head>
@@ -48,21 +48,21 @@
     <div id="blog_entries">    
 
         <div class="entry center">
-            <p class="center"><a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><span class="date">December 2017-April 2018</span><br>Austria</a></p>
+            <a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><span class="date">December 2017-April 2018</span><br>Austria</a>
    
-            <a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><img src="./resources/article-images/3-waterfallhome.jpg" width="800" height="450" alt="waterfall"></a>
+            <a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><img src="./resources/article-images/3-waterfallhome.jpg" alt="waterfall"></a>
         </div>
 
         <div class="entry center">
-            <p class="center"><a href="./articles/spain-sep2017/spain-sep2017.html"><span class="date">September 2017</span><br>Spain</a></p>
+            <a href="./articles/spain-sep2017/spain-sep2017.html"><span class="date">September 2017</span><br>Spain</a>
   
-            <a href="articles/spain-sep2017/spain-sep2017.html"><img src="./resources/article-images/2-sunsethome.jpg" width="800" height="450" alt="sunset"></a>
+            <a href="articles/spain-sep2017/spain-sep2017.html"><img src="./resources/article-images/2-sunsethome.jpg" alt="sunset"></a>
         </div>
    
         <div class="entry center">
-            <p class="center"><a href="./articles/l2a-jun-sep2017/l2a-jun-sep2017.html"><span class="date">June-September 2017</span><br>France</a></p>
+            <a href="./articles/l2a-jun-sep2017/l2a-jun-sep2017.html"><span class="date">June-September 2017</span><br>France</a>
     
-            <a href="./articles/l2a-jun-sep2017/l2a-jun-sep2017.html"><img src="./resources/article-images/1-riverhome.jpg" width="800" height="450" alt="running water"></a>
+            <a href="./articles/l2a-jun-sep2017/l2a-jun-sep2017.html"><img src="./resources/article-images/1-riverhome.jpg" alt="running water"></a>
         </div>
    
     </div>
