--- a/contact-me.html
+++ b/contact-me.html
@@ -44,8 +44,8 @@
 
     <!-- Body of page -->
     
-    <div id="contact_body" class="contact-info">
-        <img src="./resources/images/mountain1.jpg" width="850" height="478" alt="Cloudy mountains" class="center mountain-pic">
+    <div id="contact_body" class="contact-info center">
+        <img src="./resources/images/mountain1.jpg" alt="Cloudy mountains" class="center mountain-pic">
         <p class="center">For any enquiries please contact me at:<br><br><address><a href="mailto:jameswaterman22@gmail.com"><em class="email-size">jameswaterman22@gmail.com</em></a></address></p>
         <p class="center">For anything else please contact me on <a href="https://www.facebook.com/James-Waterman-301054576729993/" target="_blank"><em>Facebook</em></a>.</p>
     </div>
