--- a/contact-me.html
+++ b/contact-me.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
