--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A photography blog following my travels and adventures. A collection of all my favorite Pictures.">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
