remove insta footer link and smaller h1 at 480px.

--- a/contact-me.html
+++ b/contact-me.html
@@ -58,7 +58,7 @@
             <a href="index.html">Home</a>
             <a href="about-me.html">About Me</a>
             <a href="contact-me.html">Contact Me</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="insta">Instagram</a>
         </div>
         <p class="center">&copy; James Waterman, 2018</p> 
     </footer>
