Mobile footer and sizing.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- Header -->
     
   
-    <header>
+    <header class="head-home">
         <div class="name-top">
             <h1><a href="index.html">Waterman Photography</a></h1> 
             <h2> James Waterman</h2>
