--- a/about-me.html
+++ b/about-me.html
@@ -47,7 +47,7 @@
     <div id="about" class="about-container center">
         <h3> About </h3>
         <img  src="./resources/images/portrait.jpg" alt="Picture of Myself" class="center selfportrait">
-        <p class="para-about-me center">After picking up snowboarding age 12, I got the opportunity to travel to various places to practice. Being able to explore these distinct landscapes and having the privilege of enjoying totally new experiences; I knew I wanted to see the world. My passion of photography developed alongside my love for travel, and thus, its what I've been pursuing ever since.  </p>
+        <p class="para-about-me center">After picking up snowboarding at age 12, I got the opportunity to travel to various places to practice. Being able to explore these distinct landscapes and having the privilege of enjoying totally new experiences; I knew I wanted to see the world. My passion of photography developed alongside my love for travel, and thus, its what I've been pursuing ever since.  </p>
     </div>
 
     <!-- footer -->
