--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Waterman Photography</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./resources/css/style-header-footer.css">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
     <meta name="description" content="A photography blog following my travels and adventures. A collection of all my favorite Pictures.">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
