Add js dropdown menu.

--- a/contact-me.html
+++ b/contact-me.html
@@ -29,10 +29,11 @@
         <!-- Dropdown menu -->
 
         <div class="dropdown">
-            <span></span>
-            <span></span>
-            <span></span>
-
+            <div class="hamburger">
+                <span class="top"></span>
+                <span class="middle"></span>
+                <span class="bottom"></span>
+            </div>
             <div class="dropdown-content">
                 <nav>
                     <a href="index.html">Home</a>
@@ -65,6 +66,14 @@
     </footer>
 
     </div>
+
+    <!-- Scripts -->
+
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./resources/js/blog-js.js"></script>
 </body>
 </html>
             
