--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
 
     <!-- Blog entries -->
     
-    <div id="blog_entries">    
+    <div id="blog_entries">   
+
+        <div class="entry center">
+            <a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><span class="date">June-July 2018</span><br>Portugal</a>
+       
+            <div class="zoom-container">
+                <a href="./articles/portugal-jun-jul2018/portugal-jun-jul2018.html"><img src="./resources/article-images/pink-sky-home.jpg" alt="waterfall"></a>
+            </div>
+        </div> 
 
         <div class="entry center">
             <a href="./articles/austria-dec2017-apr2018/austria-dec2017-apr2018.html"><span class="date">December 2017-April 2018</span><br>Austria</a>
