--- a/contact-me.html
+++ b/contact-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact | Waterman Photography</title>
+    <title>Contact | James Waterman</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./resources/css/style-header-footer.css">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
@@ -16,8 +16,8 @@
 
     <header>
         <div class="name-top">
-            <h1><a href="index.html">Waterman Photography</a></h1> 
-            <h2> James Waterman</h2>
+            <h1><a href="index.html">James Waterman</a></h1> 
+            <h2>Photography | Travel</h2>
         </div>
         <div class="link-position">
             <a href="index.html">Home</a>
