--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Waterman Photography</title>
+    <title>James Waterman</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./resources/css/style-header-footer.css">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
@@ -17,8 +17,8 @@
   
     <header class="head-home">
         <div class="name-top">
-            <h1><a href="index.html">Waterman Photography</a></h1> 
-            <h2>James Waterman</h2>
+            <h1><a href="index.html">James Waterman</a></h1> 
+            <h2>Photography | Travel</h2>
         </div>
         <div class="link-position">
             <a href="index.html" class="current-page">Home</a>
@@ -46,11 +46,15 @@
         </div>
     </header>
 
+    <!-- Introduction -->
+    
+    <p class="entry center intro">Whilst constantly looking to expand my skillset, I found myself taking an interest is the basics of coding and web development. Eventually, this lead to the creation of this on-going project showcasing all of my favourite pictures from my travels.</p>
+
     <!-- Blog entries -->
     
     <div id="blog_entries">  
 
-         <!-- Portugal june-july 2018 -->
+        <!-- Portugal june-july 2018 -->
 
         <div class="entry center">
             <a href="./articles/portugal-jun-jul2018/portugal-jun-jul2018.html"><span class="date">June-July 2018</span><br>Portugal</a>
