--- a/contact-me.html
+++ b/contact-me.html
@@ -49,7 +49,7 @@
     
     <div id="contact_body" class="contact-info center">
         <img src="./resources/images/mountain1.jpg" alt="Cloudy mountains" class="center mountain-pic">
-        <p class="center">For any enquiries please contact me at:<br><br><address><a href="mailto:jameswaterman22@gmail.com"><em class="email-size">jameswaterman22@gmail.com</em></a></address></p>
+        <p class="center">For any enquiries please contact me at:<br><br><address><a href="mailto:jameswaterman.create@gmail.com"><em class="email-size">jameswaterman.create@gmail.com</em></a></address></p>
         <p class="center">For anything else please contact me on <a href="https://www.facebook.com/James-Waterman-301054576729993/" target="_blank"><em>Facebook</em></a>.</p>
     </div>
    
