--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     
   
     <header class="head-home">
-        <div class="name-top">
-            <h1><a href="index.html">James Waterman</a></h1> 
-            <h2>Photography | Travel</h2>
-        </div>
+    	<a href="index.html">
+            <div class="name-top">
+                <h1>James Waterman</h1> 
+                <h2>Photography | Travel</h2>
+            </div>
+        </a>
         <div class="link-position">
             <a href="index.html" class="current-page">Home</a>
             <a href="about-me.html">About Me</a>
