--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Blog entries -->
     
-    <div id="blog_entries">  
+    <div id="blog_entries" class="center">  
 
         <!-- Portugal june-july 2018 -->
 
