Add austria feb 2020 blog post.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
     
     <div id="blog_entries" class="center">  
 
+        <!-- Austria Febuary 2020 -->
+
+        <a href="./articles/5-austria-feb2020/austria-feb2020.html">
+            <div class="entry center">
+                <h4 class="album-title"><span class="date">Febuary 2020</span><br>Austria</h4>
+                    
+                <div class="zoom-container">
+                    <img src="./resources/article-images/5-jackvalley.jpg" alt="waterfall">
+                </div>
+             </div> 
+        </a>    
+
         <!-- Portugal june-july 2018 -->
 
    	    <a href="./articles/4-portugal-jun-jul2018/portugal-jun-jul2018.html">
