Add banner navigationmobile.

--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,21 @@
 </head>
 <body>
 
+
+    <!--  Banner  -->
+
+    <div class="banner">
+        <div class="banner-left current-banner-page">
+            <a href="index.html" class="current-banner-page">Blog</a>
+        </div>        
+        <div class="banner-right">
+            <a href="portfolio.html">Portfolio</a>
+        </div>        
+    </div>
+
+
+    
+
 <!-- Header -->
     
     <header>
