--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 </head>
 <body>
 
-	<!-- Header -->
     
+
+    <!--  Banner  -->
+
+    <div class="banner">
+        <div class="banner-left current-banner-page">
+            <a href="index.html" class="current-banner-page">Blog</a>
+        </div>        
+        <div class="banner-right">
+            <a href="portfolio.html">Portfolio</a>
+        </div>        
+    </div>
+
+
   
-    <header class="head-home">
+	<!-- Header -->
+
+     <header class="head-home">
     	<a href="index.html">
             <div class="name-top">
                 <h1>James Waterman</h1> 
