--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -11,6 +11,20 @@
 
 <body>
 
+
+    <!--  Banner  -->
+
+    <div class="banner">
+        <div class="banner-left">
+            <a href="../index.html">Blog</a>
+        </div>        
+        <div class="banner-right  current-banner-page">
+            <a href="../portfolio.html" class="current-banner-page">Portfolio</a>
+        </div>        
+    </div>
+
+    
+
 <!-- Header -->
 
     <header id="top">
