Add Jay portrait.

--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -85,6 +85,7 @@
             <img src="./portfolio-album-images/portraits/portrait8.jpg" alt="Portrait of person" loading="lazy">
             <img src="./portfolio-album-images/portraits/portrait9.jpg" alt="Portrait of person" loading="lazy">
             <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy">
+            <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
             <img src="./portfolio-album-images/portraits/portrait11.jpg" alt="Portrait of person" loading="lazy">
             <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
             <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
