--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <link href="./portfolio/portfolio-resources/portfolio-css/portfolio.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Martel:400,700|Nunito+Sans:300,400,600,700,800|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -66,50 +67,51 @@
     <!-- Body of Portfolio -->
 
     <div class="body center">
-        <h3>Portfolio</h3>
+        <h3 class="page-title">Portfolio</h3>
         <div class="portfolio-album-body">
+
             <a href="./portfolio/portrait.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/portrait.jpg" alt="Portrait of a young woman" loading="lazy">
-                    <h4>Portraits</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Portraits</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/portrait.jpg" alt="Portrait of a young woman" loading="lazy" class="album-link-img">
                 </div>
-            </a>            
+            </a>
+
             <a href="./portfolio/hospitality.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/hospitality.jpg" alt="Espresso martini" loading="lazy">
-                    <h4>Hospitality</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Hospitality</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/hospitality.jpg" alt="Espresso martini" loading="lazy" class="album-link-img">
                 </div>
             </a>
+
             <a href="./portfolio/cars.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/car.jpg" alt="Blue Mini" loading="lazy">
-                    <h4>Cars</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Cars</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/car.jpg" alt="Blue Mini" loading="lazy" class="album-link-img">
                 </div>
             </a>
+
             <a href="./portfolio/pets.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/pets.jpg" alt="Cat sat on a flower bread" loading="lazy">
-                    <h4>Pets and wildlife</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Pets and wildlife</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/pets.jpg" alt="Cat sat on a flower bread" loading="lazy" class="album-link-img">
                 </div>
             </a>
+
             <a href="./portfolio/sport.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/sport1.jpg" alt="Snowboarder boardsliding as rail." loading="lazy">
-                    <h4>Sport</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Sport</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/sport1.jpg" alt="Snowboarder boardsliding as rail." loading="lazy" class="album-link-img">
                 </div>
             </a>
+
             <a href="./portfolio/landscape.html" class="album-tile">
-                <div class="album-title-container">
-                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/landscape.jpg" alt="Landscape with a river and trees." loading="lazy">
-                    <h4>Landscape</h4>
-                    <div class="overlay"></div>
+                <div class="overlay">
+                    <h4 class="album-link-title">Landscape</h4>
+                    <img src="./portfolio/portfolio-resources/portfolio-album-cover/landscape.jpg" alt="Landscape with a river and trees." loading="lazy" class="album-link-img">
                 </div>
-            </a>            
+            </a>
+
         </div>
     </div>
 
