--- a/portfolio/cars.html
+++ b/portfolio/cars.html
@@ -67,7 +67,7 @@
 
     <div class="body center">
         <div class="album-page-heading">
-            <h3>Cars</h3>
+            <h3 class="page-title">Cars</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
