--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -66,7 +66,7 @@
 
     <div class="body center">
         <div class="album-page-heading">
-            <h3>Pets and Wildlife</h3>
+            <h3 class="page-title">Pets and Wildlife</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
