--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -66,7 +66,7 @@
 
     <div class="body center">
         <div class="album-page-heading">
-            <h3>Portraits</h3>
+            <h3 class="page-title">Portraits</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
