--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -67,7 +67,7 @@
 
     <div class="body center">
         <div class="album-page-heading">
-            <h3>Sport</h3>
+            <h3 class="page-title">Sport</h3>
             <a href="../portfolio.html">⬅ Back</a>
         </div>
     </div>
