file structure sort out

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
     <title>About | James Waterman</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/header-footer.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:300,400,600,700,800|Roboto" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
     <meta name="viewport" content="width=device-width">
@@ -14,11 +15,11 @@
     <!--  Banner  -->
 
     <div class="banner">
-        <div class="banner-left current-banner-page">
-            <a href="index.html" class="current-banner-page">Blog</a>
+        <div class="banner-link-container banner-left current-banner-page">
+            <a href="index.html" class="banner-link current-banner-page">Blog</a>
         </div>        
-        <div class="banner-right">
-            <a href="portfolio.html">Portfolio</a>
+        <div class="banner-link-container banner-right">
+            <a href="portfolio.html" class="banner-link">Portfolio</a>
         </div>        
     </div>
 
@@ -27,19 +28,19 @@
 
 <!-- Header -->
     
-    <header>
+    <header class="header">
         <a href="index.html">
             <div class="name-top">
-                <h1>James Waterman</h1> 
-                <h2>Photography | Travel</h2>
+                <h1 class="main-title title-font">James Waterman</h1> 
+                <h2 class="main-sub-heading title-font">Photography | Travel</h2>
             </div>
         </a>
         <div class="link-position">
-            <a href="index.html">Home</a>
-            <a href="about-me.html" class="current-page">About Me</a>
-            <a href="contact-me.html">Contact Me</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
+            <a href="index.html" class="nav-link title-font">Home</a>
+            <a href="about-me.html" class="current-page nav-link title-font">About Me</a>
+            <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
+            <a href="portfolio.html" class="nav-link title-font">Portfolio</a>
+            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
         </div>
 
         <!-- Dropdown menu -->
@@ -65,23 +66,23 @@
     <!-- Body About me -->
   
     <div id="about" class="about-container center">
-        <h3> About </h3>
+        <h3 class="title-font"> About </h3>
         <img  src="./resources/images/portrait.jpg" alt="Picture of Myself" class="center selfportrait">
         <p class="para-about-me center">After picking up snowboarding at age 12, I got the opportunity to travel to various places to practice. Being able to explore these distinct landscapes and having the privilege of enjoying totally new experiences; I knew I wanted to see the world. My passion for photography developed alongside my love of travel, and thus, its what I've been pursuing ever since.  </p>
     </div>
 
     <!-- footer -->
 
-    <footer>
+    <footer class="footer">
         <div class="footerlinks">
-            <a href="index.html">Home</a>
-            <a href="about-me.html">About Me</a>
-            <a href="contact-me.html">Contact Me</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="insta">Instagram</a>
+            <a href="index.html" class="footerlink">Home</a>
+            <a href="about-me.html" class="footerlink">About Me</a>
+            <a href="contact-me.html" class="footerlink">Contact Me</a>
+            <a href="portfolio.html" class="footerlink">Portfolio</a>
+            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="footerlink insta">Instagram</a>
         </div>
 
-        <p class="center">&copy; James Waterman, 2020</p> 
+        <p class="center copyright">&copy; James Waterman, 2020</p> 
     </footer>
 
     </div>
