--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -4,6 +4,7 @@
     <title>Portraits | Portfolio | James Waterman</title>
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./portfolio-resources/portfolio-css/portfolio.css" type="text/css" rel="stylesheet">
+    <link href="../resources/css/header-footer.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Martel:400,700|Nunito+Sans:300,400,600,700,800|Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="../resources/images/blog-favicon.ico">
     <meta name="viewport" content="width=device-width">
@@ -15,31 +16,32 @@
     <!--  Banner  -->
 
     <div class="banner">
-        <div class="banner-left">
-            <a href="../index.html">Blog</a>
+        <div class="banner-link-container banner-left">
+            <a href="index.html" class="banner-link">Blog</a>
         </div>        
-        <div class="banner-right  current-banner-page">
-            <a href="../portfolio.html" class="current-banner-page">Portfolio</a>
-        </div>        
+        <div class="banner-link-container banner-right current-banner-page">
+            <a href="portfolio.html" class="banner-link current-banner-page">Portfolio</a>
+        </div>   
     </div>
+
 
     
 
 <!-- Header -->
-
-    <header id="top">
+    
+    <header class="header">
         <a href="../index.html">
             <div class="name-top">
-                <h1>James Waterman</h1> 
-                <h2>Photography Portfolio</h2>
+                <h1 class="main-title title-font">James Waterman</h1> 
+                <h2 class="main-sub-heading title-font">Photography | Travel</h2>
             </div>
         </a>
         <div class="link-position">
-            <a href="../index.html">Home</a>
-            <a href="../about-me.html">About Me</a>
-            <a href="../contact-me.html">Contact Me</a>
-            <a href="../portfolio.html">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
+            <a href="../index.html" class="nav-link title-font">Home</a>
+            <a href="../about-me.html" class="nav-link title-font">About Me</a>
+            <a href="../contact-me.html" class="nav-link title-font">Contact Me</a>
+            <a href="../portfolio.html" class="nav-link title-font">Portfolio</a>
+            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
         </div>
 
         <!-- Dropdown menu -->
@@ -96,15 +98,16 @@
 
     <a href="#top" class="back_to_top center">Back to top</a>
 
-    <footer>
+    <footer class="footer">
         <div class="footerlinks">
-            <a href="../index.html">Home</a>
-            <a href="../about-me.html">About Me</a>
-            <a href="../contact-me.html">Contact Me</a>
-            <a href="../portfolio.html">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="insta">Instagram</a>
+            <a href="../index.html" class="footerlink">Home</a>
+            <a href="../about-me.html" class="footerlink">About Me</a>
+            <a href="../contact-me.html" class="footerlink">Contact Me</a>
+            <a href="../portfolio.html" class="footerlink">Portfolio</a>
+            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="footerlink insta">Instagram</a>
         </div>
-        <p class="center">&copy; James Waterman, 2020</p> 
+
+        <p class="center copyright">&copy; James Waterman, 2020</p> 
     </footer>
 
     </div>
