portfolio album pic layout update.

--- a/portfolio/cars.html
+++ b/portfolio/cars.html
@@ -80,20 +80,30 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy">        
-            <img src="./portfolio-album-images/cars/car2.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car4.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car5.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car7.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car8.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car9.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car10.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car11.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy">
-            <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy"> 
-            <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy">       
+            <div class="row">
+                <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy">        
+                <img src="./portfolio-album-images/cars/car2.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car8.jpg" alt="Picture of car." loading="lazy"> 
+                <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/cars/car5.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car4.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car7.jpg" alt="Picture of car." loading="lazy">
+            </div>
+            <div class="row">
+                
+                <img src="./portfolio-album-images/cars/car10.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car11.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy">
+            </div> 
+            <div class="row"> 
+                
+                <img src="./portfolio-album-images/cars/car9.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy">
+            </div>    
         </div>
     </div>
 
