--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -80,18 +80,26 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/hospitality/hospitality1.jpg" alt="Picture of drinks on a bar." loading="lazy">        
-            <img src="./portfolio-album-images/hospitality/hospitality2.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality3.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality4.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality5.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality6.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality7.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality8.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality9.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality10.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality11.jpg" alt="Picture of drinks on a bar." loading="lazy">
-            <img src="./portfolio-album-images/hospitality/hospitality12.jpg" alt="Picture of drinks on a bar." loading="lazy">        
+            <div class="row">
+                <img src="./portfolio-album-images/hospitality/hospitality3.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality1.jpg" alt="Picture of drinks on a bar." loading="lazy">        
+                <img src="./portfolio-album-images/hospitality/hospitality2.jpg" alt="Picture of drinks on a bar." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/hospitality/hospitality7.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality5.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality6.jpg" alt="Picture of drinks on a bar." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/hospitality/hospitality9.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality10.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality11.jpg" alt="Picture of drinks on a bar." loading="lazy">
+            </div>   
+            <div class="row"> 
+                <img src="./portfolio-album-images/hospitality/hospitality4.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality12.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality8.jpg" alt="Picture of drinks on a bar." loading="lazy">
+            </div>    
         </div>
     </div>
 
