--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -81,21 +81,29 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/landscape/landscape1.jpg" alt="Picture of a Landscape." loading="lazy">        
-            <img src="./portfolio-album-images/landscape/landscape2.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape3.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape4.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape5.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape7.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape12.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape14.jpg" alt="Picture of a Landscape." loading="lazy">
-            <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">         
+            <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape1.jpg" alt="Picture of a Landscape." loading="lazy">        
+                <img src="./portfolio-album-images/landscape/landscape2.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape3.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape4.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape5.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape7.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape14.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape12.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div>         
         </div>
     </div>
 
