--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -80,23 +80,31 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/pets/pets1.jpg" alt="Picture of some owls." loading="lazy">        
-            <img src="./portfolio-album-images/pets/pets2.jpg" alt="Picture of a pony." loading="lazy">
-            <img src="./portfolio-album-images/pets/pets3.jpg" alt="Picture of a bird." loading="lazy">
-            <img src="./portfolio-album-images/pets/pets4.jpg" alt="Picture of a pony" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets10.jpg" alt="Picture of a flower" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets11.jpg" alt="Picture of a dog" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy"> 
-            <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets16.jpg" alt="Picture of a deer" loading="lazy">
-            <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy">       
+            <div class="row">
+                <img src="./portfolio-album-images/pets/pets1.jpg" alt="Picture of some owls." loading="lazy">        
+                <img src="./portfolio-album-images/pets/pets2.jpg" alt="Picture of a pony." loading="lazy">
+                <img src="./portfolio-album-images/pets/pets3.jpg" alt="Picture of a bird." loading="lazy">
+                <img src="./portfolio-album-images/pets/pets4.jpg" alt="Picture of a pony" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets10.jpg" alt="Picture of a flower" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets11.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets16.jpg" alt="Picture of a deer" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy"> 
+                <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy">
+            </div>       
         </div>
     </div>
 
