--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -80,22 +80,30 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/portraits/portrait1.jpg" alt="Portrait of person" loading="lazy">        
-            <img src="./portfolio-album-images/portraits/portrait2.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait3.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait4.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait5.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait6.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait7.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait8.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait9.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait11.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
-            <img src="./portfolio-album-images/portraits/portrait14.jpg" alt="Portrait of person" loading="lazy"> 
-            <img src="./portfolio-album-images/portraits/portrait15.jpg" alt="Portrait of person" loading="lazy">       
+            <div class="row">
+                <img src="./portfolio-album-images/portraits/portrait2.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait1.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait8.jpg" alt="Portrait of person" loading="lazy">       
+                <img src="./portfolio-album-images/portraits/portrait7.jpg" alt="Portrait of person" loading="lazy">
+            </div>    
+            <div class="row">
+                <img src="./portfolio-album-images/portraits/portrait5.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait15.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait3.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait11.jpg" alt="Portrait of person" loading="lazy">
+            </div>    
+            <div class="row">
+                <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait9.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait4.jpg" alt="Portrait of person" loading="lazy">
+            </div>    
+            <div class="row">
+                <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait14.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait6.jpg" alt="Portrait of person" loading="lazy">
+            </div>           
         </div>
     </div>
 
