--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -80,22 +80,30 @@
 
     <div class="body center">
         <div class="album-photo-container">
-            <img src="./portfolio-album-images/sport/sport1.jpg" alt="Photo of someone snowboarding" loading="lazy">        
-            <img src="./portfolio-album-images/sport/sport2.jpg" alt="Photo of someone skiing" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport4.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport5.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport9.jpg" alt="Photo of motorsport" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport10.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport11.jpg" alt="Photo of motorsport" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport13.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport14.jpg" alt="Photo of someone snowboarding" loading="lazy">
-            <img src="./portfolio-album-images/sport/sport15.jpg" alt="Photo of motorsport" loading="lazy">    
-            <img src="./portfolio-album-images/sport/sport16.jpg" alt="Photo of someone snowboarding" loading="lazy">     
+            <div class="row">
+                <img src="./portfolio-album-images/sport/sport1.jpg" alt="Photo of someone snowboarding" loading="lazy">        
+                <img src="./portfolio-album-images/sport/sport2.jpg" alt="Photo of someone skiing" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport4.jpg" alt="Photo of someone snowboarding" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport5.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/sport/sport9.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport10.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport11.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/sport/sport13.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport14.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport15.jpg" alt="Photo of motorsport" loading="lazy">    
+                <img src="./portfolio-album-images/sport/sport16.jpg" alt="Photo of someone snowboarding" loading="lazy">
+            </div>     
         </div>
     </div>
 
