portofolio album updates.

--- a/about-me.html
+++ b/about-me.html
@@ -31,7 +31,7 @@
             <a href="index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
