--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -32,7 +32,7 @@
             <a href="../index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font no-underline">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font no-underline">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font no-underline">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
