--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -32,7 +32,7 @@
             <a href="../index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font no-underline">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font no-underline">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font no-underline">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
@@ -82,6 +82,18 @@
     <div class="body center">
         <div class="album-photo-container">
             <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div>
+            <div class="row">
+                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
+                
+                <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">
+                <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
+            </div> 
+            <div class="row">
                 <img src="./portfolio-album-images/landscape/landscape1.jpg" alt="Picture of a Landscape." loading="lazy">        
                 <img src="./portfolio-album-images/landscape/landscape2.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape3.jpg" alt="Picture of a Landscape." loading="lazy">
@@ -89,21 +101,11 @@
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/landscape/landscape5.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape6.jpg" alt="Picture of a Landscape." loading="lazy">
+                
                 <img src="./portfolio-album-images/landscape/landscape7.jpg" alt="Picture of a Landscape." loading="lazy">
-            </div>
-            <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape9.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape11.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape8.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape14.jpg" alt="Picture of a Landscape." loading="lazy">
-            </div>
-            <div class="row">
-                <img src="./portfolio-album-images/landscape/landscape13.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape10.jpg" alt="Picture of a Landscape." loading="lazy">
-                <img src="./portfolio-album-images/landscape/landscape15.jpg" alt="Picture of a Landscape." loading="lazy">
                 <img src="./portfolio-album-images/landscape/landscape12.jpg" alt="Picture of a Landscape." loading="lazy">
-            </div>         
+            </div>        
         </div>
     </div>
 
