--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -32,7 +32,7 @@
             <a href="../index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font no-underline">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font no-underline">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font no-underline">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
@@ -84,25 +84,25 @@
                 <img src="./portfolio-album-images/portraits/portrait2.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait1.jpg" alt="Portrait of person" loading="lazy"> 
                 <img src="./portfolio-album-images/portraits/portrait8.jpg" alt="Portrait of person" loading="lazy">       
-                <img src="./portfolio-album-images/portraits/portrait7.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
             </div>    
             <div class="row">
                 <img src="./portfolio-album-images/portraits/portrait5.jpg" alt="Portrait of person" loading="lazy">
-                <img src="./portfolio-album-images/portraits/portrait15.jpg" alt="Portrait of person" loading="lazy">
-                <img src="./portfolio-album-images/portraits/portrait3.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait11.jpg" alt="Portrait of person" loading="lazy">
             </div>    
             <div class="row">
                 <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait9.jpg" alt="Portrait of person" loading="lazy">
-                <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
-                <img src="./portfolio-album-images/portraits/portrait4.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait15.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait6.jpg" alt="Portrait of person" loading="lazy">
             </div>    
             <div class="row">
-                <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
-                <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait7.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait3.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait14.jpg" alt="Portrait of person" loading="lazy"> 
-                <img src="./portfolio-album-images/portraits/portrait6.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait4.jpg" alt="Portrait of person" loading="lazy">
             </div>           
         </div>
     </div>
