--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -32,7 +32,7 @@
             <a href="../index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font no-underline">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font no-underline">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font no-underline">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
@@ -81,16 +81,16 @@
     <div class="body center">
         <div class="album-photo-container">
             <div class="row">
-                <img src="./portfolio-album-images/sport/sport1.jpg" alt="Photo of someone snowboarding" loading="lazy">        
+                <img src="./portfolio-album-images/sport/sport1.jpg" alt="Photo of someone snowboarding" loading="lazy"> 
+                <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">       
                 <img src="./portfolio-album-images/sport/sport2.jpg" alt="Photo of someone skiing" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport4.jpg" alt="Photo of someone snowboarding" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport5.jpg" alt="Photo of someone snowboarding" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport9.jpg" alt="Photo of motorsport" loading="lazy">
