--- a/portfolio/cars.html
+++ b/portfolio/cars.html
@@ -32,7 +32,7 @@
             <a href="../index.html">
                 <div class="name-top">
                     <h1 class="main-title title-font no-underline">James Waterman</h1> 
-                    <h2 class="main-sub-heading title-font no-underline">Photography | Travel</h2>
+                    <h2 class="main-sub-heading title-font no-underline">Travel | Photo | Web</h2>
                     </div>
                 </a>
             <nav class="link-position">
@@ -84,25 +84,23 @@
                 <img src="./portfolio-album-images/cars/car1.jpg" alt="Picture of car." loading="lazy">        
                 <img src="./portfolio-album-images/cars/car2.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car8.jpg" alt="Picture of car." loading="lazy"> 
-                <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/cars/car5.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car4.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car7.jpg" alt="Picture of car." loading="lazy">
             </div>
             <div class="row">
-                
+                <img src="./portfolio-album-images/cars/car13.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car10.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car11.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car12.jpg" alt="Picture of car." loading="lazy">
             </div> 
             <div class="row"> 
-                
                 <img src="./portfolio-album-images/cars/car9.jpg" alt="Picture of car." loading="lazy">
+                <img src="./portfolio-album-images/cars/car6.jpg" alt="Picture of car." loading="lazy">
                 <img src="./portfolio-album-images/cars/car14.jpg" alt="Picture of car." loading="lazy">
-                <img src="./portfolio-album-images/cars/car3.jpg" alt="Picture of car." loading="lazy">
             </div>    
         </div>
     </div>
